--- a/TrinityCoreWebAPI/TrinityCoreWebAPI.csproj
+++ b/TrinityCoreWebAPI/TrinityCoreWebAPI.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CommandLayer\CommandLayer.csproj" />
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
